--- a/test/atlocal.in
+++ b/test/atlocal.in
@@ -17,8 +17,40 @@
 # CoFlo.  If not, see <http://www.gnu.org/licenses/>.
 
 ## Process this file with autoconf to produce atlocal.
+# @configure_input@
 
-# Not sure if we need something like this or not.
+# TODO Not sure if we need something like this or not.
 PATH=@abs_builddir@:@abs_top_builddir@/src:@abs_top_srcdir@/build-aux:$top_srcdir:$srcdir:$PATH
 
-GRVS_TEST_1=@GRVS_TEST_1@
+# The minimum version of GCC which CoFlo needs to run.
+MIN_GCC_VERSION="4.0.0";
+
+GCCS_FOUND_AT_CONFIGURE_TIME=@GCCS_FOUND_AT_CONFIGURE_TIME@
+
+GCCS_FOUND_AT_TESTSUITE_RUN_TIME=
+
+echo "Getting a list of gcc installations...";
+#todo This is duplicated in the ./test/Makefile.am, should figure out a way to make this a single definition.
+MAX_GCCS_TO_TEST=16;
+for (( i=0; $i<${MAX_GCCS_TO_TEST}; i++ )); do
+	# Initialize all GCC_VERSION_ARRAY entries to 0, so the skip test works correctly.
+	GCC_VERSION_ARRAY[$i]="0";
+done;
+# Get the paths to gcc's.
+GCC_PATH_ARRAY=($(find /usr/bin -regextype posix-extended -iregex '.*-.*-.*-gcc-.*(\.exe)?$' -or -iregex '.*/gcc(\.exe)?$'));
+NUM_GCCS_FOUND=${#GCC_PATH_ARRAY[*]};
+for (( i=0; $i<${NUM_GCCS_FOUND}; i++ )); do
+	# Get the version string from the compiler.
+	GCC_VERSION_STRING_LINE_ARRAY[$i]="$("${GCC_PATH_ARRAY[$i]}" --version | head -n 1)";
+	echo "Found binary: ${GCC_VERSION_STRING_LINE_ARRAY[$i]}";
+	# Extract just the "X.Y.Z".
+	GCC_VERSION_STRING_ARRAY[$i]="$(echo "${GCC_VERSION_STRING_LINE_ARRAY[$i]}" | sed -r -n -e 's/.+ ([[:digit:]]+\.[[:digit:]]+\.[[:digit:]]+)( .+)?$/\1/p')";
+	echo "  Version: ${GCC_VERSION_STRING_ARRAY[$i]}";
+	# Extract the major version number (the "X" from "X.Y.Z").
+	GCC_VERSION_ARRAY[$i]="$(echo "${GCC_VERSION_STRING_ARRAY[$i]}" | sed -r -n -e 's/.+ ([[:digit:]]+)\.[[:digit:]]+\.[[:digit:]]+( .+)?$/\1/p')";
+	echo "Found the following gcc binary: ${GCC_PATH_ARRAY[$i]} (major version ${GCC_VERSION_ARRAY[$i]})";
+done;
+# Initialize the remaining GCC path slots to "NONE" so the skipped test message looks better.
+for (( ; $i<${MAX_GCCS_TO_TEST}; i++ )); do
+	GCC_PATH_ARRAY[$i]="NONE";
+done;
