--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -23,7 +23,7 @@ MAX_GCCS_TO_TEST=16
 # Add scripts which will be generated and used during "make check" to check_SCRIPTS.
 # Note that scripts are not distributed by default, so we don't need a "nodist_" prefix here.
 check_SCRIPTS = 
-EXTRA_DIST = testsuite.at $(srcdir)/package.m4 $(TESTSUITE) atlocal.in
+EXTRA_DIST = testsuite.at $(srcdir)/package.m4 $(TESTSUITE) atlocal.in $(C_TEST_SOURCE)
 CLEANFILES = $(CPP_TEST_SOURCE)
 TESTSUITE = $(srcdir)/testsuite
 
@@ -84,7 +84,7 @@ $(srcdir)/testsuite.at:
 ###
 ### The rule which makes the "testsuite" shell script.
 ###
-$(TESTSUITE): $(srcdir)/testsuite.at $(srcdir)/package.m4 $(CPP_TEST_SOURCE)
+$(TESTSUITE): $(srcdir)/testsuite.at $(srcdir)/package.m4 $(CPP_TEST_SOURCE) $(C_TEST_SOURCE)
 	$(AUTOTEST) -I '$(srcdir)' -o $@.tmp $@.at
 	mv $@.tmp $@
 
