--- a/tests/atlocal.in
+++ b/tests/atlocal.in
@@ -1,5 +1,5 @@
 # @configure_input@                                     -*- shell-script -*-
-# atlocal.in for CoFlo's ./test directory, used to collect configure-time
+# atlocal.in for CoFlo's ./tests directory, used to collect configure-time
 # information about the build system.
 #
 # Copyright 2011 Gary R. Van Sickle (grvs@users.sourceforge.net).
@@ -30,10 +30,10 @@ GCCS_FOUND_AT_CONFIGURE_TIME=@GCCS_FOUND_AT_CONFIGURE_TIME@
 GCCS_FOUND_AT_TESTSUITE_RUN_TIME=
 
 echo "Getting a list of gcc installations...";
-#todo This is duplicated in ./test/testsuite.at, should figure out a way to make this a single definition.
+#todo This is duplicated in ./tests/testsuite.at, should figure out a way to make this a single definition.
 MAX_GCCS_TO_TEST=16;
 for (( i=0; $i<${MAX_GCCS_TO_TEST}; i++ )); do
-	# Initialize all GCC_VERSION_ARRAY entries to 0, so the skip test works correctly.
+	# Initialize all GCC_VERSION_ARRAY entries to 0, so the skip tests works correctly.
 	GCC_VERSION_ARRAY[$i]="0";
 done;
 # Get the paths to gcc's.
