CFG fixup work.  Packaging work.  Versioning work.

--- a/configure.ac
+++ b/configure.ac
@@ -30,9 +30,11 @@
 AC_PREREQ([2.67])
 
 # Define an M4 macro which will get the working copy's current version info via "svnversion".
-m4_include([m4/coflo_source_control_version.m4])
+#m4_include([m4/coflo_source_control_version.m4])
 
-AC_INIT([CoFlo], [0.1.0.SVN_VERSION], [BUG-REPORT-ADDRESS],,[http://coflo.sourceforge.net/])
+#AC_INIT([CoFlo], [0.1.0.SVN_VERSION], [BUG-REPORT-ADDRESS],,[http://coflo.sourceforge.net/])
+AC_INIT([CoFlo], [0.1.0.m4_esyscmd_s([build-aux/svn-version-gen .tarball-version])], [BUG-REPORT-ADDRESS],,[http://coflo.sourceforge.net/])
+
 #AC_SUBST([SVN_VERSION])
 AC_CONFIG_SRCDIR([src/main.cpp])
 AC_CONFIG_HEADERS([config.h])
@@ -40,17 +42,15 @@ AC_COPYRIGHT([Copyright (C) 2011 Gary R. Van Sickle])
 
 # Use the auxilliary build tools (e.g. install-sh, config.sub, etc.) in ./build-aux.
 AC_CONFIG_AUX_DIR([build-aux])
-AC_REQUIRE_AUX_FILE([install-sh])
-AC_REQUIRE_AUX_FILE([missing])
-AC_REQUIRE_AUX_FILE([depcomp])
+
+# Require our source control versin checking script. 
 AC_REQUIRE_AUX_FILE([svn-version-gen])
-# Don't think we need config.guess or config.sub, not using AC_CANONICAL_BUILD/HOST/TARGET
 
 # Additional Autoconf macros are in m4/.
 AC_CONFIG_MACRO_DIR([m4])
 
 # Make sure we re-configure when the version changes.
-AC_SUBST([CONFIG_STATUS_DEPENDENCIES], ['$(top_srcdir)/build-aux/svn-version-gen' '$(top_srcdir)/.version'])
+AC_SUBST([CONFIG_STATUS_DEPENDENCIES], ['$(top_srcdir)/.version'])
 
 # Initialize Automake.
 # See <http://www.gnu.org/software/automake/manual/automake.html#Options> for details on
