--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -18,8 +18,11 @@
 # Subdirectories with their own Makefile{.am}'s.
 SUBDIRS = controlflowgraph debug_utils libexttools
 
-# Make sure the Doxygen configuration file is distributed.
-EXTRA_DIST = Doxyfile
+# Make sure to distribute the Doxygen configuration file and the parser source.
+EXTRA_DIST = Doxyfile $(srcdir)/gcc_cfg_parser.g
+
+# The generated parser .cpp files should not normally be cleaned.  Make them maintainer-clean files. 
+MAINTAINERCLEANFILES = $(srcdir)/gcc_cfg_parser.g.d_parser.cpp
 
 bin_PROGRAMS = coflo
 coflo_SOURCES = main.cpp \
@@ -39,9 +42,26 @@ coflo_SOURCES = main.cpp \
 	SuccessorTypes.h \
 	TranslationUnit.cpp TranslationUnit.h \
 	safe_enum.h
+	
+# \	gcc_cfg_parser.g.d_parser.cpp
 
 coflo_CPPFLAGS = $(AM_CPPFLAGS) $(BOOST_CPPFLAGS)
 coflo_CFLAGS = $(AM_CXXFLAGS)
 coflo_CXXFLAGS = $(AM_CXXFLAGS)
 coflo_LDFLAGS = $(BOOST_LDFLAGS)
-coflo_LDADD = ./controlflowgraph/libcontrolflowgraph.a ./controlflowgraph/statements/libstatements.a ./debug_utils/libdebugutils.a ./libexttools/libexttools.a $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_REGEX_LIB) $(BOOST_SYSTEM_LIB) $(BOOST_FILESYSTEM_LIB)
+coflo_LDADD = ./controlflowgraph/libcontrolflowgraph.a \
+	./controlflowgraph/statements/libstatements.a \
+	./debug_utils/libdebugutils.a \
+	./libexttools/libexttools.a \
+	$(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_REGEX_LIB) $(BOOST_SYSTEM_LIB) $(BOOST_FILESYSTEM_LIB)
+	
+#	/usr/local/lib/libdparse.a \#
+
+# Rule to make gcc_cfg_parser.g.d_parser.cpp
+# Note that the output file is built source, but we don't want the user to have to have dparser installed,
+# so it gets distributed.
+$(srcdir)/gcc_cfg_parser.g.d_parser.cpp: $(srcdir)/gcc_cfg_parser.g
+	 make_dparser --ext=cpp "$<"
+
+
+
