Back edge fixups improved, fixup visitor class split off into a separate file.

--- a/src/controlflowgraph/Makefile.am
+++ b/src/controlflowgraph/Makefile.am
@@ -19,6 +19,7 @@ SUBDIRS = statements
 
 noinst_LIBRARIES = libcontrolflowgraph.a
 libcontrolflowgraph_a_SOURCES = \
+	BackEdgeFixupVisitor.cpp BackEdgeFixupVisitor.h \
 	CFGEdgeTypeBase.cpp CFGEdgeTypeBase.h \
 	CFGEdgeTypeFunctionCallBypass.cpp CFGEdgeTypeFunctionCallBypass.h \
 	CFGEdgeTypeFallthrough.cpp CFGEdgeTypeFallthrough.h \
